--- a/05-results.Rmd
+++ b/05-results.Rmd
@@ -11,6 +11,7 @@ library(plotly)
 library(readxl)
 library(ggpubr)
 library(forcats)
+library(viridis)
 ```
 
 ## Covid Cases
@@ -71,6 +72,7 @@ fig2
 
 ```
 
+This graph shows that the darkest states have the highest number of coronavirus cases. From this graph we can see that California, Texas, and Florida have the greatest number of cases, while the majority of central America seem to have few cases in comparison. In addition, hovering over each state will give more information on how many exact total cases are in each state. 
 
 ```{r}
 fig1 <- fig %>% add_trace(
@@ -85,6 +87,8 @@ fig1 <- fig1 %>% layout(
 
 fig1
 ```
+
+In contrast to the first map, the second map now shows the number of positive covid cases per capita. This map can give more clear information on how each state is handling the pandemic as it takes population of each state into account. In the first map, it appeared as if California, Texas, and Florida were doing the worst with the pandemic. With this new map we can see that North Dakota is actually the state that is affected the most, as it has the most covid cases per capita, and that California and Texas pale in comparison to other states in Central America. 
 
 ```{r}
 
@@ -102,6 +106,7 @@ parcoords(df_ppc_case,
 
 ```
 
+This parallel coordinates plot is another representation of how each state is being affected by the coronavirus pandemic. From this graph, we can observe that high number of cases in the state does not directly coordinate to high cases per capita, and that most of the states with low covid case numbers actually have more cases per capita. 
 
 ### Covid19 Cases in Time Series
 ```{r}
@@ -120,6 +125,8 @@ ggplot(us_cases1,aes(x=date,y=total_cases)) +
   ggtitle("Cumulative Covid19 Cases in the US")
 ```
 
+This graph shows the cummulative number of covid cases starting from February of 2020 to December of 2020. As shown, it looks like the first case of the coronavirus was reported in the United States in February, and has had an exponential trend in the number of cases since then. Specifically from September to December, cases almost doubled from the first eight months.
+
 ```{r}
 ggplot(us_cases1,aes(date,new_cases)) +
   geom_line(color="#69b3a2") + 
@@ -130,6 +137,8 @@ ggplot(us_cases1,aes(date,new_cases)) +
   ggtitle("Daily New Covid19 Cases in the US")
 
 ```
+
+This graph plots time series data of the covid cases from the first case in the US in February of 2020 to December of 2020. While there have been minor dips in the daily number of cases such as in June and September, there is mostly an upwards trend, specifically a spike from November to December. 
 
 ## County
 ```{r}
@@ -218,9 +227,10 @@ ggplot(staff_short_df, aes(x=staff_short_prop)) +
 
 This histogram demonstrates the percentage of hospitals within a State that reported critical staffing shortages in regards to open bed space. We see that many states have more than 20% of their hospitals reporting critical staffing shortage as of November 26. This provides further insight in our previous chart because even though there seemingly are many empty beds left, hospitals themselves have reported critical shortages.
 
-## Covid Impact on Airlines: 
-Data Transformation 
+## Covid Impact on Airlines
+
 ```{r}
+#Data Transformation
 data <- read_excel("./data/scheduled-canceled-operated-flights-jan2019-jul2020.xlsx")
 
 year <- c(2019, 2019, 2019, 2019, 2019, 2019, 2019, 2019, 2019, 2019,
@@ -251,25 +261,9 @@ my_data$JetBlue <- as.numeric(my_data$JetBlue)
 my_data$Southwest <- as.numeric(my_data$Southwest)
 my_data$Spirit <- as.numeric(my_data$Spirit)
 my_data$United <- as.numeric(my_data$United)
-
-head(my_data)
 ```
 
-Exploratory Analysis 
-```{r}
-#Main Question: How did Covid impact travel and transportation?
-
-#difference between 2019 vs. 2020 in total flights 
-tot_flights_2019 <- sum(my_data['Tot_Flights'][[1]][1:12])
-tot_flights_2020 <- sum(my_data['Tot_Flights'][[1]][13:19])
-tot_flight_data <- data.frame("year" = c("2019", "2020"), 
-                              "flights" = c(tot_flights_2019, tot_flights_2020))
-ggplot(tot_flight_data, aes(x = year, y = flights)) +
-  geom_bar(stat = "identity", fill='dodgerblue1') +
-  ggtitle("Bar Graph of Total Flights in 2019 vs. 2020") 
-```
-
-As seen from an overall perspective, there are a lot fewer flights taken in 2020 than in 2019, most likely due to the pandemic. Although, the 2019 data includes all months, while the 2020 data includes only the first 7 months, therefore, we will further our analysis using only the first 7 months of the 2019 data as well.
+Something to point out in this airline dataset is that only the data for the first 7 months of 2020 is given, from January to July, and thus, the graphs including 2019 data will only include the data from the first seven months to make proper observations.
 
 ```{r}
 tot_flights_2019 <- sum(my_data['Tot_Flights'][[1]][1:7])
@@ -277,27 +271,16 @@ tot_flights_2020 <- sum(my_data['Tot_Flights'][[1]][13:19])
 tot_flight_data <- data.frame("year" = c("2019", "2020"), 
                               "flights" = c(tot_flights_2019, tot_flights_2020))
 ggplot(tot_flight_data, aes(x = year, y = flights)) +
-  geom_bar(stat = "identity", fill='dodgerblue1') +
-  ggtitle("Bar Graph of Total Flights in First 7 Months 2019 vs. 2020") 
+  geom_bar(stat = "identity") +
+  ggtitle("Bar Graph of Total Flights in First 7 Months 2019 vs. 2020") + 
+  scale_color_viridis() 
 ```
 
-
-Using only the first 7 months of the 2019 data to compare its results more accuractely with the first 7 months of the 2020 data, there is still a clear distinctment between the number of flights taken in 2019 vs. 2020. But, since we are using all of our 2020 data, we cannot make any analyses on the effect of the pandemic on travel as travel restrictions began in March. Therefore, we are going to plot the pattern of flights taken throughout last year and this year to analyze the impact.
+Therefore, using only the first 7 months of the 2019 data to compare its results more accuractely with the first 7 months of the 2020 data, we see a clear distinctment between the number of flights taken in 2019 vs. 2020, observing that the pandemic could have played a role in this distinctment. Let us see use covid case data to detect the pattern of how the number of coronavirus cases in the United States affected the number of flights taken in and out of the US.
 
 ```{r}
 data_2020 <- my_data[my_data$year==2020, ]
 
-ggplot(my_data, aes(fct_inorder(month), Tot_Flights, col = year, group = year)) +
-  geom_line() + 
-  geom_point() + 
-  ggtitle("Line Graph of Total Flights by Months") + 
-  xlab("Month") + 
-  ylab("Total Flights")
-```
-
-Using this graph, we can clearly see a big drop in flights from March to April of 2020. One can assume from this drop that the pandemic most likely played a role in the decrease of flights. Around May, the number of flights slowly start to increase, but not to the level that it was at the beginning of the year, as can be seen by the comparison to the flights taken in May of 2019. Even though flight frequency increased, it is still greatly decreased from the regular frequency of flights. Let us see how the pattern of the number of coronavirus cases in the United States affected the travel pattern. 
-
-```{r}
 df_jan_cases <-  df_case %>% 
   filter(date == "2020-01-29")
 jan_cases <- sum(df_jan_cases$cases)
@@ -332,28 +315,28 @@ tidydf <- tidydf %>% select(month, cases, flights) %>%
 
 
 p1 <- ggplot() +
-  geom_line(data = data_2020, aes(x=fct_inorder(month), y=Tot_Flights, group=1),color="#69b3a2") + 
+  geom_line(data = data_2020, aes(x=fct_inorder(month), y=Tot_Flights, group=1), color="#481567FF") + 
   geom_point(size = 4) + 
   theme(axis.text.x=element_text(angle=60, hjust=1))+
   theme_light()+
   ggtitle("Total Flights in 2020 in the US") + 
   xlab("Month") + 
-  ylab("Total Flights")
+  ylab("Total Flights") 
 
 p2<- ggplot() +
-  geom_line(data = data_2020 , aes(x=fct_inorder(month), y=month_cases, group=1),color="orange") + 
+  geom_line(data = data_2020 , aes(x=fct_inorder(month), y=month_cases, group=1), color="#55C667FF") + 
   geom_point(size = 4) + 
   theme(axis.text.x=element_text(angle=60, hjust=1))+
   theme_light()+
   ggtitle("COVID cases per Month in US") + 
   xlab("Month") + 
-  ylab("Total Cases")
+  ylab("Total Cases") 
 
 ggarrange(p1,p2,nrow=2)
 
 ```
 
-This graph shows when the coronavirus hit the United States hard, and affected many different factors, one being the airline industry and travel. Although there were cases in January, the number of cases quickly ramped up from March to April, which correlates with the decline in travel. From the graph, it can be seen that around May, although cases were still increasing, travel started to increase again, as people started to most likely relax on restrictions. 
+This graph shows when the coronavirus hit the United States hard, and affected many different factors, one being the airline industry. Although there were cases in January, the number of cases quickly ramped up from March to April, which correlates with the decline in travel. From the graph, it can be seen that around May, although cases were still increasing, travel started to increase again, as people started to most likely relax on restrictions. 
 
 ```{r}
 #See how much percent each airline was affected 
@@ -370,10 +353,11 @@ airlines <- c("Alaska","Allegiant", "American", "Delta", "Frontier", "Hawaiian",
 
 ggplot(data.frame(airlines, percent_changes), 
        aes(reorder(airlines, -percent_changes), percent_changes)) +
-  geom_bar(stat = "identity", fill='dodgerblue1') +
+  geom_bar(stat = "identity") +
   ggtitle("Bar Graph of Percent Decrease for each Airline") + 
   xlab("Airline") + 
-  ylab("Percent Decrease")
+  ylab("Percent Decrease") + 
+  scale_color_viridis()
 ```
 
 This data shows by how much percent the number of flights in
@@ -389,19 +373,23 @@ decline in flights when the pandemic started.
 ```{r}
 top_drops <- data_2020 %>%
   select(month, JetBlue, Hawaiian, United, Delta) %>%
-  gather(key = "variable", value = "value", -month)
-ggplot(top_drops, aes(fct_inorder(month), value, group = variable)) + 
-  geom_line(aes(color = variable), size = 1) +
+  gather(key = "Airline", value = "value", -month)
+
+ggplot(top_drops, aes(fct_inorder(month), value, group = Airline)) + 
+  geom_line(aes(color = Airline), size = 1) +
   geom_point() + 
   ggtitle("Top 4 Airline Brands Affected") + 
   xlab("Month") + 
-  ylab("Flights")
+  ylab("Flights") +
+  scale_color_viridis(discrete=TRUE) +
+  theme_bw()
 ```
 
-This graph shows the time series data of the top four airline brands affected, taken from the previous graph. The trends stay consistent with the trends that we've been seeing in the previous graphs. 
+This graph shows the pattern of the top four airline brands affected, taken from the previous graph. The trends stay consistent with the trends that we've been seeing in the previous graphs. 
 
-Final Findings on Airline Data: 
+#### Final Findings on Airline Data 
+
 The most revealing findings from this exploratory data analysis showed a couple of things. Firstly, there was a major decrease in flights from the year 2019 to the year 2020. Secondly, the number of flights mainly dropped in April of 2020, correlating with the time that the lockdown started and travel restrictions were placed everywhere. Looking at each airline, there was a decrease of the total number of flights taken for each airline, showing that almost every airline industry was affected by the pandemic. Some airlines had a decrease in flights by more than 60%, showing the intensity of the effect on the airline industry. More than half of their revenue was gone. Overall, in terms of the effect on travel during the coronavirus pandemic, there are clear patterns that show that travel was greatly affected. Airplanes were not a first choice method of transporation anymore, as people were not even travelling in the first place. This major decline in airline transportation and travel in and out of the United States, shows how greatly the pandemic played a role in the decline of the airline industry. 
 
 
-## Covid Impact on Restaurants:
+## Covid Impact on Restaurants
