--- a/03-cleaning.Rmd
+++ b/03-cleaning.Rmd
@@ -5,6 +5,8 @@ Write a draft of the [Data Transformation chapter](https://edav.info/project#rep
 ```{r}
 library(tidyverse)
 library(ggplot2)
+library(readxl)
+
 ```
 
 
