--- a/05-results.Rmd
+++ b/05-results.Rmd
@@ -12,6 +12,9 @@ library(readxl)
 library(ggpubr)
 library(forcats)
 library(viridis)
+library(tidyr)
+library(stringr)
+library(lubridate)
 ```
 
 ## Covid Cases
@@ -431,3 +434,76 @@ The most revealing findings from this exploratory data analysis showed a couple 
 
 
 ## Covid Impact on Restaurants
+
+```{r}
+us_case = read.csv("./data/us-states.csv")
+restaurant = read.csv("./data/YoY_Seated_Diner_Data-2.csv")
+restaurant1 = restaurant %>% pivot_longer(cols = starts_with("X"),
+                           names_to = "Date",
+                           values_to = "Percentage")%>%
+               mutate(Date = paste0("2020.",str_remove(Date,"X")))%>%
+               mutate(Date = as.Date(chartr(old = ".", new = "-", Date)))
+reopen = read.csv("./data/YoY_Reopened_Seated_Diner_Data.csv")
+reopen1 = reopen %>% pivot_longer(cols = starts_with("X"),
+                           names_to = "Date",
+                           values_to = "Percentage")%>%
+               mutate(Date = paste0("2020.",str_remove(Date,"X")))%>%
+               mutate(Date = as.Date(chartr(old = ".", new = "-", Date)))
+```
+
+```{r}
+us_states = c('Alabama','Arizona','California','Colorado', 'Connecticut',
+       'District of Columbia','Florida', 'Georgia', 'Hawaii', 'Illinois',
+       'Indiana', 'Kansas', 'Kentucky', 'Louisiana',
+       'Maryland', 'Massachusetts', 'Michigan',
+       'Minnesota', 'Missouri', 'Nebraska', 'Nevada', 'New Jersey',
+       'New Mexico', 'New York', 'North Carolina', 'Ohio', 'Oklahoma', 'Oregon',
+       'Pennsylvania','Rhode Island', 'South Carolina', 'Tennessee', 
+       'Texas', 'Utah', 'Virginia', 'Washington', 'Wisconsin')
+
+restaurant_state = restaurant1[restaurant1$Type == 'state',]
+restaurant_state = restaurant_state[restaurant_state$Name %in% us_states,]
+US.nation.res = restaurant1[which(restaurant1$Type=="country" & restaurant1$Name=="United States"), ]
+
+reopen_state = reopen1[reopen1$Type == 'state',]
+reopen_state = reopen_state[reopen_state$Name %in% us_states,]
+```
+
+```{r}
+US_case_by_date = US_case %>%
+  mutate(date = as.Date(date))%>%
+  group_by(date) %>%
+  summarize(cumu_sum = sum(cases)) %>%
+  mutate(daily_new = cumu_sum-lag(cumu_sum)) %>%
+  drop_na()
+```
+
+```{r}
+ggplot(restaurant_state, aes(x = Date, y = Name, fill = Percentage)) + 
+  geom_tile()+
+  scale_fill_viridis()
+```
+The heatmap above shows the number of seated diners by state from February until December 2020. We can see a clear drop in seated dinners across all states since mid-March.
+Hawaii's restaurant industry was hit hardest and just had a slight recovery after November. District of Columbia also has a visibly severe impact on sitted dinner than other states. People in New York, New Jersey and Washinton seem to go for sitted dinner later. On the contrary,Alabama, Arizona, Florida, Oklahoma and Texas start eating out earlier. 
+```{r}
+p1 <- ggplot() +
+  geom_line(data = US.nation.res,aes(x=Date, y=Percentage),color="#69b3a2") + 
+  geom_smooth(method ="loess", se = FALSE,span=0.2, lwd =1.5)+
+  geom_hline(yintercept=0, color="orange", size=.5)+ 
+  theme(axis.text.x=element_text(angle=60, hjust=1))+
+  theme_light()+
+  ggtitle("Year-over-year Comparison of seated dinner in the US")
+```
+
+```{r}
+p2<- ggplot() +
+  geom_line(data = US_case_by_date,aes(x=date, y=daily_new),color="orange") + 
+  geom_smooth(method ="loess", se = FALSE,span=0.2, lwd =0.8)+
+  theme(axis.text.x=element_text(angle=60, hjust=1))+
+  theme_light()+
+  ggtitle("Daily COVID case in US")
+ggarrange(p1,p2,nrow=2)
+```
+
+From the year-over-year seated dinner rate plot, we can see the seated dinner hugely drop to -100% compared to the same time of last year, means all the seated dinner stopped nationwide by late March. The seated dinner rate started to increase starting from late April to June. After late June, the seated dinner rate became stable and showing an obious weekly pattern. By comparing the seated dinner rate and daily covid trend together, we can see that after states are reopen for seated dinner, the in-door dining rate did not change so much coresponding to change of COVID cases. Especially, after mid October, the daily covid case change hugely but people's willingness of in-door dining does not change so much, which might be dangerous.
+
