--- a/07-conclusion.Rmd
+++ b/07-conclusion.Rmd
@@ -1,7 +1,7 @@
 # Conclusion
 
-County Policy Orders was a very interesting dataset to work with. Limitations included our ability to congregate data if they were worded differently. For example, many of the policies may have fallen in the same category, but were seperated into different ones instead. In the future, we would like to incorporate the start and stop times of each policy instead of just the start time. This can give us more idea about how states are responding at different times of the pandemic. In addition, the Comment section may also be interesting to analyze. 
+County Policy Orders was a very interesting dataset to work with. Limitations included our ability to congregate data if they were worded differently. For example, many of the policies may have fallen in the same category, but were seperated into different ones instead. In the future, we would like to incorporate the start and stop times of each policy instead of just the start time. This can give us more idea about how states are responding at different times of the pandemic. In addition, the Comment section may also be interesting to analyze. <br>
 
-The Hospitalization dataset had a lot of information but was very limiting because it only showed information for a given day and did not store any previous day information after each website update. Even so, it was very helpful in analyzing the situation across different states. Future directions would include looking for more data to make a generalized time series to match up hospital capacity with covid cases.
+The Hospitalization dataset had a lot of information but was very limiting because it only showed information for a given day and did not store any previous day information after each website update. Even so, it was very helpful in analyzing the situation across different states. Future directions would include looking for more data to make a generalized time series to match up hospital capacity with covid cases. <br>
 
 One of the limitations for the airline data was that it did not have data in 2020 for the months of August to November, and therefore, we could not make further analyses about the impact of the pandemic past July. From all the graphs, there was one common theme that the pandemic definitely had the biggest impact on the airline industry from March to April.  In the future, we would like to explore how the airline industry changed to accomodate for the pandemic, such as intense cleaning before flight boarding, less passengers per flight, and much more. We would like to learn what precautions are being taken to change for the state of the world and for people's safety. Additionally, tracking how many people actually got the coronavirus from taking flights is also crucial information in one determining whether they want to board a flight or not. Data analysis on this information will provide useful insights for the citizens of the world, and aim to help them make an informed decision on whether they prefer to travel or not. 
