--- a/04-missing.Rmd
+++ b/04-missing.Rmd
@@ -75,6 +75,17 @@ As seen from this missing data dataframe, there is no dark squares representing 
 
 ## Restaurant data
 ```{r}
+us_states = c('Alabama','Arizona','California','Colorado', 'Connecticut',
+       'District of Columbia','Florida', 'Georgia', 'Hawaii', 'Illinois',
+       'Indiana', 'Kansas', 'Kentucky', 'Louisiana',
+       'Maryland', 'Massachusetts', 'Michigan',
+       'Minnesota', 'Missouri', 'Nebraska', 'Nevada', 'New Jersey',
+       'New Mexico', 'New York', 'North Carolina', 'Ohio', 'Oklahoma', 'Oregon',
+       'Pennsylvania','Rhode Island', 'South Carolina', 'Tennessee', 
+       'Texas', 'Utah', 'Virginia', 'Washington', 'Wisconsin')
+```
+
+```{r}
 restaurant = read.csv("./data/YoY_Seated_Diner_Data-2.csv")
 restaurant1 = restaurant %>% pivot_longer(cols = starts_with("X"),
                            names_to = "Date",
@@ -82,6 +93,14 @@ restaurant1 = restaurant %>% pivot_longer(cols = starts_with("X"),
                mutate(Date = paste0("2020.",str_remove(Date,"X")))%>%
                mutate(Date = as.Date(chartr(old = ".", new = "-", Date)))
 reopen = read.csv("./data/YoY_Reopened_Seated_Diner_Data.csv")
+reopen1 = reopen %>% pivot_longer(cols = starts_with("X"),
+                           names_to = "Date",
+                           values_to = "Percentage")%>%
+               mutate(Date = paste0("2020.",str_remove(Date,"X")))%>%
+               mutate(Date = as.Date(chartr(old = ".", new = "-", Date)))
+
+reopen_state = reopen1[reopen1$Type == 'state',]
+reopen_state = reopen_state[reopen_state$Name %in% us_states,]
 
 reopen_na = reopen[reopen$Type == 'state',]
 reopen_na = reopen_na[reopen_na$Name %in% us_states,][,-1]
