cleaned policy df
changed to state id instead of duplicate

--- a/03-cleaning.Rmd
+++ b/03-cleaning.Rmd
@@ -30,8 +30,7 @@ Finally, we created this table by counting all the times each state appears in t
 ```{r}
 state <- county[county$policy_level == "state" & county$start_stop=='start',]
 policy_count <- count(state, state_id)
-policy_count$state_abbr <- policy_count$state_id
-policy_count
+head(policy_count)
 ```
 
 ## Hospitalization Data
