--- a/03-cleaning.Rmd
+++ b/03-cleaning.Rmd
@@ -133,7 +133,7 @@ reopen_state = reopen_state[reopen_state$Name %in% us_states,]
 US-state data is in csv format and we can read it directly into R. It contains cumulative COVID case numbers by states of each day. We want to see the daily new cases by substract the cumulative data by the data of previous day.
 ```{r}
 us_case = read.csv("./data/us-states.csv")
-US_case_by_date = US_case %>%
+US_case_by_date = us_case %>%
   mutate(date = as.Date(date))%>%
   group_by(date) %>%
   summarize(cumu_sum = sum(cases)) %>%
