--- a/05-results.Rmd
+++ b/05-results.Rmd
@@ -510,15 +510,19 @@ p1 <- ggplot() +
   ggtitle("Year-over-year Comparison of seated dinner in the US")
 ```
 
+
 ```{r}
+US_case_by_date1 <- US_case_by_date[US_case_by_date$date >= "2020-02-18" & US_case_by_date$date <= "2020-11-22",]
 p2<- ggplot() +
-  geom_line(data = US_case_by_date,aes(x=date, y=daily_new),color="orange") + 
+  geom_line(data = US_case_by_date1,aes(x=date, y=daily_new/1000),color="orange") + 
   geom_smooth(method ="loess", se = FALSE,span=0.2, lwd =0.8)+
   theme(axis.text.x=element_text(angle=60, hjust=1))+
   theme_light()+
-  ggtitle("Daily COVID case in US")
+  ggtitle("Daily COVID case in US")+
+  labs(y = "Thousands of Daily New Cases")
 ggarrange(p1,p2,nrow=2)
 ```
+
 
 From the year-over-year seated dinner rate plot, we can see the seated dinner hugely drop to -100% compared to the same time of last year, means all the seated dinner stopped nationwide by late March. The seated dinner rate started to increase starting from late April to June. After late June, the seated dinner rate became stable and showing an obious weekly pattern. By comparing the seated dinner rate and daily covid trend together, we can see that after states are reopen for seated dinner, the in-door dining rate did not change so much coresponding to change of COVID cases. Especially, after mid October, the daily covid case change hugely but people's willingness of in-door dining does not change so much, which might be dangerous.
 
