--- a/05-results.Rmd
+++ b/05-results.Rmd
@@ -46,7 +46,23 @@ df_total_cases$hover <- with(df_total_cases, paste(state, '<br>', "Covid cases",
                                                    "Covid cases per capita",case_ppl))
                    
 ```   
+
+
+```{r}
+df_total_cases %>%
+  mutate(state = fct_reorder(state, desc(-cases))) %>%
+  ggplot(aes(x = state, y = cases/1000)) +
+    geom_point(stat = "identity")+
+    coord_flip() +
+    ggtitle("Total Confirmed Covid19 Cases for Each State in The U.S.")+
+    ylab("thousands of cases")+
+    xlab("state")
+
+    
+```
+
 ### Covid Maps
+
 ```{r}
 # give state boundaries a white border
 l <- list(color = toRGB("white"), width = 2)
@@ -75,7 +91,10 @@ fig2
 
 ```
 
-This graph shows that the darkest states have the highest number of coronavirus cases. From this graph we can see that California, Texas, and Florida have the greatest number of cases, while the majority of central America seem to have few cases in comparison. In addition, hovering over each state will give more information on how many exact total cases are in each state. 
+This graph shows that the darkest states have the highest number of coronavirus cases. From this graph we can see that California, Texas, and Florida have the greatest number of cases, while the majority of central America seem to have few cases in comparison. In addition, hovering over each state will give more information on how many exact total cases are in each state.
+
+
+
 
 
 ```{r}
@@ -112,19 +131,6 @@ parcoords(df_ppc_case,
 ```
 
 
-```{r}
-df_total_cases %>%
-  mutate(state = fct_reorder(state, desc(-cases))) %>%
-  ggplot(aes(x = state, y = cases/1000)) +
-    geom_point(stat = "identity")+
-    coord_flip() +
-    ggtitle("Total Confirmed Covid19 Cases for Each State in The U.S.")+
-    ylab("Cases(thousand)")+
-    xlab("State")
-
-    
-```
-
 This parallel coordinates plot is another representation of how each state is being affected by the coronavirus pandemic. From this graph, we can observe that high number of cases in the state does not directly coordinate to high cases per capita, and that most of the states with low covid case numbers actually have more cases per capita. 
 
 
@@ -142,8 +148,8 @@ ggplot(us_cases1,aes(x=date,y=total_cases/1000000)) +
   geom_line(color="#69b3a2") + 
   scale_x_date(date_breaks = "1 month", date_labels = "%b")+
   theme_light(16)+
-  xlab("Date")+
-  ylab("Cases(million)")+
+  xlab("date")+
+  ylab("millions of cases")+
   ggtitle("Cumulative Covid19 Cases in the US")
 ```
 
@@ -156,8 +162,8 @@ ggplot(us_cases1,aes(date,new_cases/1000)) +
   geom_smooth(method = "loess", se = FALSE,span=0.2, lwd = 0.8, show.legend = TRUE,aes(color = "blue")) +
   scale_x_date(date_breaks = "1 month", date_labels = "%b")+
   theme_light(16)+
-  ylab("Daily New Cases(thousand)")+
-  xlab("Date")+
+  ylab("thousands of cases")+
+  xlab("date")+
   ggtitle("Daily New Covid19 Cases in the U.S.")+
   scale_color_identity(name = "Line",
                           breaks = c("#69b3a2", "blue"),
